improved button accessibility and fixed spacing issues on employee management screen

--- a/frontend/src/manager/manageEmployees/employeeCard/employeeContainer.css
+++ b/frontend/src/manager/manageEmployees/employeeCard/employeeContainer.css
@@ -1,14 +1,14 @@
 #employee-table-heading {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin-right: 280px;
+    margin-right: 262px;
+    margin-left: 8px;
+    margin-bottom: 20px;
 }
 
 #employee-container {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 0px 50px;
     gap: 10px;
 }
